# mRTC

./: .gitignore  CMakeLists.txt  LICENSE  README.md
api/: common.cpp  ipreview.h  istream_puller.h  istream_pusher.h  ixchat_service.h
cmake/: curl.cmake  curlcpp.cmake  curlcpp1.cmake
core/: stream_puller.cpp  stream_puller.h  stream_pusher.cpp  stream_pusher.h  xchat_global.cpp  xchat_global.h  xchat_http.cpp  xchat_http.h  xchat_preview.cpp  xchat_preview.h  xchat_service.cpp  xchat_service.h
examples/QtClient/: CMakeLists.txt  QtClient.cpp  QtClient.h  QtWidget.ui  main.cpp
media/: cam_video_source.cpp  cam_video_source.h  cam_video_track_source.cpp  cam_video_track_source.h
player/: sdl2_player.cpp  sdl2_player.h  sdl2_sdk.cpp  sdl2_sdk.h
rtc_stream/: pull_stream.cpp  pull_stream.h  push_stream.cpp  push_stream.h  rtc_stream.cpp
src/api/: common.cpp  common.h  imedia_source.h  imrtc_service.h  istream_puller.h  istream_pusher.h
src/core/: common.h  mrtc_global.cpp  mrtc_global.h  mrtc_http.cpp  mrtc_http.h  mrtc_preview.cpp  mrtc_preview.h  mrtc_service.cpp  mrtc_service.h  stream_puller.cpp  stream_puller.h  stream_pusher.cpp  stream_pusher.h
src/media/: cam_video_source.cpp  cam_video_track_source.cpp  cam_video_track_source.h
src/player/: sdl2_player.cpp  sdl2_player.h  sdl2_sdk.cpp
src/rtc_stream/: pull_stream.cpp  pull_stream.h  push_stream.cpp  push_stream.h  rtc_stream.cpp  rtc_stream.h
